css/styles.css
:root {
  --black: #171321;
  --dkblue: #0d314b;
  --plum: #4b0d49;
  --hotmag: #ff17e4;
  --magenta: #e310cb;
  --aqua: #86fbfb;
  --white: #f7f8fa;
  --font-size: 1.3rem;
  --mono: "Oxygen mono", monospace;
  --sans: Oxygen, sans-serif;
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  padding: 0;
  margin: 0;
  background-color: var(--black);
  color: var(--white);
  font-family: var(--sans);
  font-size: var(--font-size);
}

h1,
h2,
h3 {
  margin: 0;
}

a {
  color: var(--magenta);
  text-decoration: none;
}

a:hover {
  color: var(--hotmag);
  text-decoration: none;
}

nav {
  font-family: var(--mono);
  font-size: 80%;
  padding: 3rem 2rem;
}

nav h1 a{
  font-family: var(--sans);
}

nav ul {
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: row wrap;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  list-style-type: none;
}

nav li:first-child {
  flex-basis: 100%;
  text-align: center;
}

nav [class*="fa-"] {
  color: var(--aqua);
  font-size: 150%;
}

nav h1 [class*="fa-"] {
  font-size: 100%;
}

nav [class*="fa-"]:hover {
  color: var(--hotmag);
}

nav a {
  color: var(--white);
  text-decoration: none;
  display: block;
}

.button {
  background-color: var(--magenta);
  padding: 0.5rem;
  border-radius: 5px;
  color: var(--white);
}

.button:hover {
  color: var(--white);
  background-color: var(--hotmag);
}

#intro {
  padding: 4rem 1rem 10rem 1rem;
  max-width: 1200px;
  margin: 0 auto;
}

#intro p {
  font-size: 1rem;
  line-height: 1.5;
}

#intro .name {
  font-family: var(--mono);
  font-size: 1rem;
}

.name span {
  display: block;
  font-family: var(--sans);
  color: var(--aqua);
  font-size: 4rem;
}

#intro h2 {
  font-size: 4rem;
}

.section-blue {
    background-color: var(--dkblue);
}

#projects {
  padding: 4rem 1rem;
}
#projects h2 {
  font-size: 2.5rem;
  margin-bottom: calc(2.5rem * 1.5);
}
#projects h3 {
  color: var(--aqua);
}

#projects h4 {
  font-size: 1rem;
  font-family: var(--mono);
  margin: 0;
}
.blackbox {
  padding: 1rem;
  border-radius: 10px;
  color: white;
  background-color: var(--black);
  font-size: 1rem;
  line-height: 1.5;
}
#projects ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  gap: 1rem;
  font-size: 1rem;
}
#projects img {
  margin: 2rem 0 4rem 0;
  padding: 1rem;
  border-left: 1px solid var(--aqua);
  border-top: 1px solid var(--aqua);
  border-radius: 25px;
  max-width: 100%;
  height: auto;

}

#contact {
  width: 400px;
  text-align: center;
  margin: 0 auto;
  padding: 3rem 0;
}

.contact-container {
  background-color: var(--plum);
}

.gradient {
  background: linear-gradient(
    90deg,
    rgba(255, 23, 228, 1) 0%,
    rgba(134, 251, 251, 1) 100%
  );
  height: 2px;
}

footer {
  text-align: center;
  padding: 4rem 0;
}

footer ul {
  list-style-type: none;
  padding: 0;
  margin: 2rem 0;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: 3rem;
  font-size: 3rem;
}

@media (min-width: 800px) {

    #projects {
        max-width: 1200px;
        margin: 0 auto;
    }
    article {
      display: grid;
      grid-template-columns: repeat(10, 1fr);
    }
    #projects img {
      grid-column: 1/6;
      grid-row: 1/2;
      max-width: 100%;
      height: auto;
    }
    .text {
      grid-column: 5/11;
      grid-row: 1/2;
      order: 2;
      text-align: right;
    }
    .reverse_img {
      grid-column: 5/11;
      grid-row: 1/2;
    }
    .reverse_text {
      grid-column: 1/7;
      grid-row: 1/2;
      order: 2;
      text-align: left;
    }
    #projects ul {
      justify-content: flex-end;
    }

    #projects .reverse_ul {
      justify-content: flex-start;
    }

@media (min-width: 850px) {
  nav {
    max-width: 1200px;
    margin: 0 auto;
  }
  nav li:first-child {
    flex-basis: auto;
    text-align: left;
    margin-right: auto;
  }
}

